card  section done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,135 @@
             quisquam, ab veniam deleniti accusantium nobis iusto quo, provident dignissimos placeat. Commodi ullam
             veniam in ex.</p>
     </header>
+    <main>
+        <div class="container my-5 py-5">
+            <div class="row g-4">
+                <div class="col-9">
+                    <div class="row g-4">
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/Aaron Ramsdale.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">Aaron Ramsdale</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/Ben White.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">Ben White</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/Bukayo Saka.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">Bukayo Saka</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/Emile Smith Rowe.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">Emile Smith Rowe</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/Gabriel Jesus.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">Gabriel Jesus</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/Gabriel Martinelli.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">Gabriel Martinelli</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/Martin Odegaard.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">Martin Odegaard</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/Takehiro Tomiyasu.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">Takehiro Tomiyasu</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card dark border border-light border-opacity-25" style="width: 18rem;">
+                                <img src="images/William Saliba.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title h3 text-center text-white fw-semibold">William Saliba</h5>
+                                    <div class="d-flex justify-content-around fw-semibold text-secondary">
+                                        <p>36 Goals</p>
+                                        <p>120 Assist</p>
+                                    </div>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-3">
+
+                </div>
+    </main>
 
 </body>
 
