--- a/index.html
+++ b/index.html
@@ -149,7 +149,64 @@
                     </div>
                 </div>
                 <div class="col-3">
+                    <div>
+                        <div class="dark mb-4 p-4">
+                            <h2 class="text-white py-2 ">Selected Players</h2>
+                            <div class="text-secondary h5">
+                                <ol>
+                                    <li>Ben White</li>
+                                    <li>Bukayo Saka</li>
+                                    <li>Gabriel Jesus</li>
+                                    <li>Takehiro Tomiyasu</li>
+                                    <li>William Saliba</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="dark mt-4 p-4">
+                            <h2 class="text-white text-center py-2">Budget</h2>
+                            <div>
+                                <div class="inline text-secondary d-flex justify-content-around align-items-start py-2">
+                                    <p class="fw-semibold">Per Player</p>
+                                    <input class="w-50 bg-dark text-white border border-1 border-white py-1"
+                                        type="text">
+                                </div>
+                                <div class="py-2">
+                                    <button class="text-white bg-danger px-5 py-2 mx-5 fw-bold">Calculate</button>
+                                </div>
+                                <div class="py-2">
+                                    <p class="text-secondary text-center fw-semibold">Player Expensive <span
+                                            class="text-white">$<span>100</span></span>
+                                    </p>
+                                </div>
+                                <div>
+                                    <div
+                                        class="inline text-secondary d-flex justify-content-around align-items-start py-2">
+                                        <p class="fw-semibold">Manager</p>
+                                        <input class="w-50 bg-dark text-white border border-1 border-white py-1"
+                                            type="text">
+                                    </div>
+                                    <div
+                                        class="inline text-secondary d-flex justify-content-around align-items-start py-2">
+                                        <p class="fw-semibold">Coatch </p>
+                                        <input class="w-50 bg-dark text-white border border-1 border-white py-1"
+                                            type="text">
+                                    </div>
+                                    <div class="py-2">
+                                        <button class="text-white bg-danger px-4 py-2 mx-5 fw-bold">Calculate
+                                            Total</button>
+                                    </div>
+                                    <div class="py-2">
+                                        <p class="text-white text-center fw-semibold">Total <span
+                                                class="text-danger">$<span></span>1000</span>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
 
+                        </div>
+                    </div>
                 </div>
     </main>
 
