--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -50,7 +51,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -63,7 +65,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +79,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +93,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -102,7 +107,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -115,7 +121,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +135,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +149,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold">Select</a>
+                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</a>
                                 </div>
                             </div>
                         </div>
@@ -151,15 +160,11 @@
                 <div class="col-3">
                     <div>
                         <div class="dark mb-4 p-4">
-                            <h2 class="text-white py-2 ">Selected Players</h2>
+                            <h3 class="text-white py-2">Selected Players <span id="total-added-players">0</span></h3>
                             <div class="text-secondary h5">
-                                <ol>
-                                    <li>Ben White</li>
-                                    <li>Bukayo Saka</li>
-                                    <li>Gabriel Jesus</li>
-                                    <li>Takehiro Tomiyasu</li>
-                                    <li>William Saliba</li>
-                                </ol>
+                                <ul id="finalPlayersName" type="I">
+
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -173,7 +178,8 @@
                                         type="text">
                                 </div>
                                 <div class="py-2">
-                                    <button class="text-white bg-danger px-5 py-2 mx-5 fw-bold">Calculate</button>
+                                    <button id="btn-calculate"
+                                        class="text-white bg-danger px-5 py-2 mx-5 fw-bold">Calculate</button>
                                 </div>
                                 <div class="py-2">
                                     <p class="text-secondary text-center fw-semibold">Player Expensive <span
@@ -209,7 +215,12 @@
                     </div>
                 </div>
     </main>
-
+    <footer>
+        <hr class="bg-white">
+        <p class="text-white text-center py-4 fw-semibold">Copyright @ 2022 All Rights Reserved</p>
+    </footer>
+    <script src="js/selected.js"></script>
+    <script src="js/calculate.js"></script>
 </body>
 
 </html>
