--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Make Your Own Team</title>
+    <title>Arsenal F.C.</title>
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- css sheet -->
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body class="bg-dark">
     <header class="dark text-center py-5">
-        <h1 class="text-danger display-1 fw-bold fst-italic">Make Your Own Team </h1>
-        <p class="text-white w-50 mx-auto fw-semibold">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Quibusdam quam
-            reiciendis
-            dicta
-            alias autem
-            quisquam, ab veniam deleniti accusantium nobis iusto quo, provident dignissimos placeat. Commodi ullam
-            veniam in ex.</p>
+        <h1 class="text-danger display-1 fw-bold fst-italic heading py-4">Make Your Own Team </h1>
+        <p class="text-white w-50 mx-auto fw-semibold py-2">Arsenal Football Club, commonly referred to as Arsenal, is a
+            professional football club based in Islington, London, England. Arsenal plays in the Premier League, the top
+            flight of English football.</p>
     </header>
     <main>
         <div class="container my-5 py-5">
@@ -37,8 +37,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button class="button btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -51,8 +51,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button class="button btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -65,8 +65,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button id="button" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -79,8 +79,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button id="button" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -93,8 +93,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button id="button" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -107,8 +107,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button id="button" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -121,8 +121,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button id="button" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -135,8 +135,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button id="button" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
@@ -149,8 +149,8 @@
                                         <p>36 Goals</p>
                                         <p>120 Assist</p>
                                     </div>
-                                    <a href="#" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
-                                        onclick="addToCart(this)">Select</a>
+                                    <button id="button" class="btn btn-danger px-5 py-2 mx-5 fw-bold"
+                                        onclick="addToCart(this)">Select</button>
                                 </div>
                             </div>
                         </div>
